fixed size of x and o on mobile

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ footer a {
   }
 
   .board-button {
-    font-size: 90px;
+    font-size: 80px;
   }
 
   .scoreboard {
